# coder

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  run.ps1
crates/coder-cli/: Cargo.toml
crates/coder-cli/src/: main.rs
crates/coder-openhands/: Cargo.toml
crates/coder-openhands/src/: lib.rs
crates/coder-server/: Cargo.toml
crates/coder-server/src/: lib.rs
crates/coder-store/: Cargo.toml
crates/coder-store/src/: lib.rs
crates/coder-workflow/: Cargo.toml
crates/coder-workflow/src/: lib.rs
docs/: 1.0-acceptance-tests.md  CAPABILITY_BOUNDARY_MATRIX.md  CODEX_PARITY_GAP_REPORT.md  CODEX_STYLE_TIMELINE.md  DESKTOP_APP_PLAN.md  FOCUSED_PRODUCT_COMPLETION_REPORT.md  HARNESS_CODEX_STANDARD.md  LOCAL_CACHE_AND_RESOURCE_POLICY.md  NEXT_PHASE_ARCHITECTURE_AUDIT.md  NEXT_PHASE_COMPLETION_REPORT.md  NEXT_PHASE_DELETION_REPORT.md  NON_BLOCKING_ENHANCEMENTS.md  OPENHANDS_INTEGRATION.md  OPENHANDS_PLANNER_REUSE_DECISION.md  PLANNER_FIRST_PRODUCT_LOOP.md  PLANNER_FIRST_RELEASE_CHECKLIST.md  PLANNER_MEMORY_OPENHANDS_AUDIT.md  PLUGIN_AND_SKILLS_PAGE.md  PROVIDER_SETUP.md  REACT_PRODUCT_SURFACE.md  (+44 more)
legacy-python/: .env.example  README.md  pyproject.toml
legacy-python/src/coder_workbench/: __init__.py  cli.py  config.py  llm.py  project_index.py
legacy-python/src/coder_workbench/actions/: __init__.py  events.py  result_budget.py  tool_execution.py
legacy-python/src/coder_workbench/agent_graph/: artifacts.py  context.py  effects.py  evaluation.py  events.py  executor.py  interruption.py  planner_strategy.py  prompts.py  repair.py  round_budget.py  runner.py  scheduler.py  schema.py  skills.py  validation.py
legacy-python/src/coder_workbench/agent_harness/: __init__.py  actions.py  artifact_repair_pipeline.py  base.py  context_preprocessor.py  contracts.py  execution_loop.py  execution_memory.py  execution_verification.py  observations.py  permissions.py  planner.py  policies.py  prompt_layers.py  scratchpad.py  session.py  stop_gate.py  streaming_action_executor.py  tool_batcher.py  tool_gate.py  tool_metadata.py
legacy-python/src/coder_workbench/agent_model/: __init__.py  compiler.py  compiler_cache.py  profile.py  token_budget.py
legacy-python/src/coder_workbench/budget/: broker.py  reservation.py
legacy-python/src/coder_workbench/coding/: artifacts.py  checks.py  command_discovery.py  command_policy.py  command_service.py  context_builder.py  debug.py  eval.py  module_graph.py  patch_pipeline.py  patch_service.py  repo_index.py  risk_map.py  sandbox.py  symbol_index.py
legacy-python/src/coder_workbench/context/: __init__.py  agentic_router.py  compaction.py  harness_packets.py  repo_discovery.py  repo_models.py  repo_safety.py  repo_search.py  retrieval_router.py
legacy-python/src/coder_workbench/core/: __init__.py  agent_workflow.py  archetypes.py  artifacts.py  authority.py  planner_chat_artifacts.py
legacy-python/src/coder_workbench/extensions/: policy.py  registry.py  router.py  runtime.py  schema.py
legacy-python/src/coder_workbench/harness_runtime/: __init__.py  artifact_projector.py  dry_run.py  fallback_provider.py  loops.py  manager.py  native_events.py  profiles.py  providers.py  runtime_context.py  safety.py  sandbox.py  store.py
legacy-python/src/coder_workbench/memory/: __init__.py  bm25_index.py  chroma_index.py  embeddings.py  hybrid_index.py  knowledge_import.py  models.py  planner_file_memory.py  policy.py  retriever.py  schema.py  store.py
legacy-python/src/coder_workbench/observability/: __init__.py  tracing.py
legacy-python/src/coder_workbench/openhands_tools/: __init__.py  hybrid_rag_search.py
legacy-python/src/coder_workbench/runtime/: __init__.py  state.py
legacy-python/src/coder_workbench/runtime_capabilities/: __init__.py  registries.py  resolver.py
legacy-python/src/coder_workbench/runtime_kernel/: __init__.py  round_state.py  run_control.py  run_controller.py  run_guard.py
legacy-python/src/coder_workbench/runtime_state/: __init__.py  checkpoints.py  reducers.py  store.py
legacy-python/src/coder_workbench/server/: agent_manager.py  app.py  cli.py  planner_chat_sessions.py  settings.py  storage.py  storage_objects.py
legacy-python/src/coder_workbench/server/stores/: __init__.py  _paths.py  artifacts.py  blobs.py  cache.py  contexts.py  extensions.py  ledgers.py  live_runs.py  metadata.py  results.py  run_events.py  tool_results.py
legacy-python/src/coder_workbench/skills/: __init__.py  context.py  index.py  installer.py  ledger.py  registry_client.py  router.py  store.py  verifier.py
legacy-python/src/coder_workbench/tools/: __init__.py  mcp.py  patching.py  registry.py
legacy-python/tests/: test_action_events.py  test_action_gateway_tool_execution.py  test_agent_archetypes.py  test_agent_graph_ask_human.py  test_agent_graph_capabilities.py  test_agent_graph_coding_harness.py  test_agent_graph_effects.py  test_agent_graph_executor.py  test_agent_graph_intervention.py  test_agent_graph_merge.py  test_agent_graph_no_human_prompt.py  test_agent_graph_scheduler.py  test_agent_harness.py  test_agent_type_engine_boundary.py  test_agentic_context_router.py  test_architecture_boundaries.py  test_artifact_projector.py  test_bm25_index.py  test_budget_broker.py  test_chroma_index.py  test_code_worker_cancel_timeout.py  test_code_worker_claude_parity_acceptance.py  test_code_worker_command_workflow.py  test_code_worker_context_preprocessor.py  test_code_worker_lifecycle.py  test_code_worker_patch_workflow.py  test_code_worker_recovery_policy.py  test_code_worker_result_budget.py  test_code_worker_stop_gate.py  test_code_worker_streaming_executor.py  test_code_worker_tool_batcher.py  test_code_worker_tool_loop.py  test_code_worker_tool_metadata.py  test_coding_eval_gate.py  test_coding_intelligence.py  test_command_policy.py  test_context_budget.py  test_context_retrieval_router.py  test_current_contracts.py  test_debug_finding_replan.py  (+59 more)
legacy-python/tests/fixtures/coding_tasks/: python_bugfix_001.json  python_bugfix_autoloop_001.json
(+327 files in other folders)
