[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coder-workbench"
version = "0.1.0"
description = "Local-first agent workflow workbench for controlled coding tasks."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "langchain-openai>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "fastapi>=0.137.0",
  "uvicorn>=0.49.0",
]

[project.scripts]
coder = "coder_workbench.cli:main"
coder-api = "coder_workbench.server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
