[package]
name = "coder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "coder-rust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
coder-config.workspace = true
coder-core.workspace = true
coder-events.workspace = true
coder-openhands.workspace = true
coder-server.workspace = true
coder-store.workspace = true
coder-tools.workspace = true
coder-workflow.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
