[package]
name = "coder-openhands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coder-core.workspace = true
coder-events.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
coder-store.workspace = true
tokio.workspace = true
