[package]
name = "coder-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
coder-config.workspace = true
coder-core.workspace = true
coder-events.workspace = true
coder-extensions.workspace = true
coder-harness.workspace = true
coder-memory.workspace = true
coder-store.workspace = true
coder-tools.workspace = true
coder-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tower.workspace = true
