[package]
name = "coder-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
coder-config.workspace = true
coder-core.workspace = true
coder-events.workspace = true
coder-harness.workspace = true
coder-openhands.workspace = true
coder-store.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
